# opad

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUTH_PLAN.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  DEBUGGING.md  DEVLOG.md  Dockerfile  Dockerfile.api  Dockerfile.web  Dockerfile.worker  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  REFERENCE.md  SETUP.md  TEST_COVERAGE_SUMMARY.md  docker-compose.local.yml  input.json  nixpacks.toml  package.json  pyproject.toml  results.txt  service_diagram.drawio  service_diagram_layers.drawio  sonar-project.properties  test_r2_download.py  vercel.json
.claude/agents/: changelog-agent.md  code-modifier.md  code-reviewer.md  code-suggester.md  docs-agent.md  qa-agent.md  unittest-agent.md  version-release-agent.md
.claude/hooks/: check-complexity.sh
.cursor/agents/: code-modifier.md  code-suggester.md  cursorrules.md  default-agent.md  qa-agent.md
.github/workflows/: run-crewai.yml
client/shared/: index.ts  package.json
client/web/: package.json
client/web/__tests__/: setup.ts
client/web/app/: globals.css
client/web/components/: ArticleList.tsx  ArticleStatusBadge.tsx  EmptyState.tsx  InputForm.tsx  VocabularyList.tsx
client/web/hooks/: useAsyncFetch.ts  useStatusPolling.ts
client/web/lib/: api.ts  formatters.ts
client/web/types/: article.ts
docs/: ARCHITECTURE.md  CHANGELOG.md  DEBUGGING.md  REFERENCE.md  SETUP.md  architecture-hexagonal.html  flow_diagrams.md
output/: adapted_reading_material.md  found_articles.json  selected_article.json
scripts/: README.md  benchmark_entry_selection.py  benchmark_llm_response_time.py  test_cases.py  test_definition_selection.py  test_hybrid_dictionary.py  test_reduced_prompt.py  test_token_usage.py  update_roadmap_issues.py
src/adapter/crew/: article_generator.py  crew.py  main.py  models.py  progress_listener.py
src/api/: __init__.py  dependencies.py  job_queue.py  main.py  models.py  queue.py  security.py
src/crew/: crew.py  guardrails.py  main.py  models.py  progress_listener.py
src/opad/: crew.py  main.py  progress_listener.py
src/port/: article_generator.py  article_repository.py  dictionary.py  job_queue.py  llm.py  nlp.py  token_usage_repository.py  user_repository.py  vocabulary.py  vocabulary_repository.py
src/scripts/: test_dictionary_agent.py
src/services/: __init__.py  article_generation_service.py  article_submission_service.py  auth_service.py  dictionary_service.py  lemma_extraction.py  sense_selection.py  token_usage_service.py  vocabulary_service.py
src/utils/: __init__.py  cloudflare.py  dictionary_api.py  json_parsing.py  language_handlers.py  language_metadata.py  lemma_extraction.py  llm.py  logging.py  mongodb.py  progress.py  prompts.py  sense_selection.py  token_usage.py
src/web/: .gitignore  biome.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
src/web/lib/: api.ts  (+2 more)
src/worker/: __init__.py  context.py  job_tracker.py  main.py  processor.py  token_tracker.py
web/: README.md  VERCEL_FIX.md  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: InputForm.tsx  MarkdownViewer.tsx
web/public/: adapted_reading_material.md
(+154 files in other folders)
