[project]
name = "opad"
version = "0.2.1"
description = "opad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "boto3",
    "python-dotenv",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0"
]

[tool.setuptools]
# Include all packages in src/ directory
# opad: CrewAI crew implementation
# api: FastAPI service for HTTP endpoints
# worker: Background job processor
# utils: Shared utilities (cloudflare, progress tracking)
packages = ["opad", "api", "api.routes", "api.tests", "worker", "worker.tests", "utils"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
opad = "opad.main:run"
run_crew = "opad.main:run"
train = "opad.main:train"
replay = "opad.main:replay"
test = "opad.main:test"
run_with_trigger = "opad.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
