[project]
name = "opad"
version = "0.2.1"
description = "opad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "boto3",
    "python-dotenv",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pymongo>=4.6.0"
]

[tool.setuptools]
# Include all packages in src/ directory
# crew: CrewAI crew implementation
# api: FastAPI service for HTTP endpoints
# worker: Background job processor
# utils: Shared utilities (cloudflare, progress tracking)
packages = ["crew", "api", "api.routes", "api.tests", "worker", "worker.tests", "utils"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
opad = "crew.main:run"
run_crew = "crew.main:run"
train = "crew.main:train"
replay = "crew.main:replay"
test = "crew.main:test"
run_with_trigger = "crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/crew", "src/api", "src/worker", "src/utils"]
