[project]
name = "opad"
version = "0.17.0"
description = "opad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.9.3",
    "boto3",
    "python-dotenv",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "pymongo>=4.6.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "litellm>=1.50.0",
    "tenacity>=9.0.0",
    "stanza>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crew", "src/api", "src/worker", "src/utils"]

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "radon>=6.0.1",
]

[project.scripts]
opad = "crew.main:run"
run_crew = "crew.main:run"
